# system-designs-cpp

./: CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/auto_singleton/: AutoSingleton.hpp  properties.cpp  properties.hpp
modules/bimap/: BiMap.hpp
modules/constexpr_factory/: Definitions.hpp  Factory.hpp  Type1.hpp  Type2.hpp  Type3.hpp
modules/constexpr_factory/implementations/: Lib1.cpp  Lib2.cpp
modules/constexpr_factory/services/: Type2.hpp  Type3.hpp
modules/object_pool/: ObjectPool.hpp  properties.cpp  properties.hpp
modules/safe_containers/: fifo.hpp  vector.hpp
modules/static_factory/: Definitions.hpp  Factory.hpp
modules/static_factory/implementations/: Lib1.cpp  Lib2.cpp
modules/static_factory/services/: Type1.hpp  Type2.hpp  Type3.hpp
modules/thread_pool/: ThreadPool.cpp  ThreadPool.hpp  properties.cpp  properties.hpp
modules/thread_pool/pool_manager/: Arguments.cpp  Arguments.hpp  PoolManager.cpp  PoolManager.hpp  PoolRequest.cpp  PoolRequest.hpp  function_traits.hpp
modules/thread_safe_containers/: fifo.hpp  vector.hpp
object_pool/: ObjectPool.h  properties.cpp  properties.h
test/: main.cpp
tests/: CMakeLists.txt  auto_singleton.cpp  bimap.cpp  constexpr_factory.cpp  main.cpp  object_pool.cpp  safe_containers.cpp  static_factory.cpp  thread_pool.cpp  thread_safe_containers.cpp
tests/utility/: output.hpp
